--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a id="SierraReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index">Sierra Reports Subscriptions</a>
                         </li>
+                        <li class="nav-item admin">
+                            <a id="Admin_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="Admin" asp-action="Index"> <i class="fas fa-user-cog"></i> Admin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
