Adding new group is fully functional

--- a/wwwroot/css/marMaxxReports.css
+++ b/wwwroot/css/marMaxxReports.css
@@ -42,9 +42,10 @@
 
 .marMaxxSubscriptionsRow_Header {
     height: 40px;
-    background: #E5E5E5;
+    background: #9E0000;
     position: sticky;
     top: 0px;
+    color: white;
     z-index: 10;
 }
 
