--- a/wwwroot/css/userSubscriptions.css
+++ b/wwwroot/css/userSubscriptions.css
@@ -48,9 +48,10 @@
 
 .userSubscriptionsRow_Header {
     height: 40px;
-    background: #E5E5E5;
+    background: #9E0000;
     position: sticky;
     top: 0px;
+    color: white;
     z-index: 10;
 }
 
