--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -58,7 +58,7 @@
                     <select id="marMaxxGroup" name="marMaxxGroup" multiple>
                         @for (int i = 0; i < Model.groupIDs.Count; i++)
                         {
-                        <option title="@Model.groupIDs[i]" value=@Model.groupNames[i] label="<b>ID: </b>@Model.groupIDs[i]</br> <b>Name: </b>@Model.groupNames[i]"> </option>
+                            <option title="@Model.groupIDs[i]" value=@Model.groupNames[i] label="<b>ID: </b>@Model.groupIDs[i]</br> <b>Name: </b>@Model.groupNames[i]"> </option>
                         }
                     </select>
                 </div>
@@ -70,7 +70,7 @@
 
         </div>
     </div>
-    
+
 
     <div id="saveSubscription" class="save-subscription">
     </div>
@@ -80,4 +80,19 @@
 </div>
 
 <div id="hiddenSelectedReport">
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="loadMe" tabindex="-1" role="dialog" aria-labelledby="loadMeLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <div class="loader"></div>
+                <div clas="loader-txt">
+                    <p>Loading...</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
