--- a/wwwroot/css/addNewMarMaxxReport.css
+++ b/wwwroot/css/addNewMarMaxxReport.css
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 1280px) {
     #viewReportParams {
-        margin-left: 126px;
+        margin-left: 86px;
     }
     .dynamic-params-div {
         max-height: 288px;
@@ -71,6 +71,7 @@
 }
 
 .dynamic-params-div {
+    min-height: 215px;
     overflow-y: scroll;
     width: 100%;
 }
