Visual Fixes/Changes

--- a/wwwroot/css/marMaxxReports.css
+++ b/wwwroot/css/marMaxxReports.css
@@ -37,6 +37,7 @@
 }
 
 .marMaxxSubscriptionsRow_Last {
+    border-bottom: 1px solid #ADADAD;
     height: 32px;
 }
 
@@ -63,3 +64,4 @@
     z-index: 3;
     position: relative;
 }
+
