--- a/wwwroot/css/admin.css
+++ b/wwwroot/css/admin.css
@@ -106,3 +106,11 @@
 .first{
     margin-top: 18px;
 }
+
+.even {
+    border-bottom: 1px solid #ADADAD;
+}
+
+.odd {
+    border-bottom: 1px solid #ADADAD;
+}
