Adding new copy icon and fixing styling

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -334,6 +334,12 @@ body {
     margin-left: 1px;
 }
 
+.copyBtn {
+    border: none;
+    background: white;
+    margin-left: 1px;
+}
+
 .fa-trash {
     color: black;
 }
