--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -76,7 +76,7 @@
             <select id="marMaxxGroup" name="marMaxxGroup" multiple>
                 @for (int i = 0; i < Model.groupIDs.Count; i++)
                 {
-                    <option title="@Model.groupIDs[i]" value=@Model.groupNames[i] label="<b>ID: </b>@Model.groupIDs[i]</br> <b>Name: </b>@Model.groupNames[i]"> </option>
+                    <option title="@Model.groupNames[i]" value=@Model.groupIDs[i] label="<b>ID: </b>@Model.groupIDs[i]</br> <b>Name: </b>@Model.groupNames[i]"> </option>
                 }
             </select>
         </div>
