--- a/wwwroot/css/marMaxxReports.css
+++ b/wwwroot/css/marMaxxReports.css
@@ -50,7 +50,7 @@
     z-index: 10;
 }
 
-.marMaxxSubscriptionsEntry_SubscriptionID, .marMaxxSubscriptionsEntry_SubscriptionName, .marMaxxSubscriptionsEntry_ReportName, .marMaxxSubscriptionsEntry_GroupName, .marMaxxSubscriptionsEntry_GroupID, .marMaxxSubscriptionEntry_Dynamic {
+.marMaxxSubscriptionsEntry_SubscriptionID, .marMaxxSubscriptionsEntry_SubscriptionName, .marMaxxSubscriptionsEntry_ReportName, .marMaxxSubscriptionsEntry_GroupName, .marMaxxSubscriptionsEntry_GroupID, .marMaxxSubscriptionEntry_Dynamic, .marMaxxSubscriptionsEntry_FileFormat, .marMaxxSubscriptionsEntry_Schedule {
     text-align: center;
 }
 
