--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -81,6 +81,55 @@
             </select>
         </div>
     </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="fileFormat">File Format:</label>
+            <select id="fileFormat" name="fileFormat">
+                <option value="EXCELOPENXML">EXCELOPENXML</option>
+                @if (Model.selectedFileFormat == "PDF")
+                {
+                    <option value="PDF" selected>PDF</option>
+                    <option value="CSV">CSV</option>
+                }
+                else if (Model.selectedFileFormat == "CSV")
+                {
+                    <option value="PDF">PDF</option>
+                    <option value="CSV" selected>CSV</option>
+                }
+                else
+                {
+                    <option value="PDF">PDF</option>
+                    <option value="CSV">CSV</option>
+                }
+            </select>
+        </div>
+    </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="schedule">Schedule:</label>
+            <select id="schedule" name="schedule">
+                <option value="Daily">Daily</option>
+
+                @if (Model.selectedSchedule == "Weekly")
+                {
+                    <option value="Weekly" selected>Weekly</option>
+                    <option value="Quarterly">Quarterly</option>
+                }
+                else if (Model.selectedSchedule == "Quarterly")
+                {
+                    <option value="Weekly">Weekly</option>
+                    <option value="Quarterly" selected>Quarterly</option>
+                }
+                else
+                {
+                    <option value="Weekly">Weekly</option>
+                    <option value="Quarterly">Quarterly</option>
+                }
+            </select>
+        </div>
+    </div>
 </div>
 
 <div id="addNewDynamic" class="dynamic-div">
