Visual bug fix with new child rows

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -476,3 +476,7 @@ table.dataTable.no-footer{
             text-transform: uppercase;
             text-decoration: underline;
         }
+
+.child-row {
+    border-bottom: 1px solid #ADADAD;
+}
