Minor tweaks and fixes

--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -80,7 +80,7 @@
                     <label class="filter-label" for="schedule">Schedule:</label>
                     <select id="schedule" name="schedule">
                         <option value="Daily">Daily</option>
-                        <option value="Weekly">Weekly</option>
+                        <option value="Weekly" selected>Weekly</option>
                         <option value="Quarterly">Quarterly</option>
                     </select>
                 </div>
