--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -50,9 +50,9 @@
         <div class="is-active">
             <p class="radio-label filter-label">Is Active:</p>
             <div class="radio-btns">
-                <input type="checkbox" id="checkYes" class="checkbox-isactive" name="is_active" value="yes" />
+                <input type="checkbox" id="checkYes" class="checkbox-isactive" name="is_active" value="yes" checked/>
                 <label id="yesBox" class="yes-box form-check-label" for="yes">Yes</label>
-                <input type="checkbox" id="checkNo" class="checkbox-isactive" name="is_active" value="no" />
+                <input type="checkbox" id="checkNo" class="checkbox-isactive" name="is_active" value="no" checked/>
                 <label for="no" class="form-check-label">No</label>
             </div>
         </div>
