Add New Sierra Report Subscription Page Added

--- a/wwwroot/css/addNewSierraReport.css
+++ b/wwwroot/css/addNewSierraReport.css
@@ -2,15 +2,19 @@
     float: right;
 }
 
+.page-header {
+    background-color: #f28c20;
+}
+
 #viewReportParams {
     width: 200px;
-    background-color: #9E0000;
+    background-color: #f28c20;
     color: white;
     font-weight: 700;
 }
 
-#saveMarmaxxSubscription {
-    background-color: #9E0000;
+#saveSierraSubscription {
+    background-color: #f28c20;
     color: white;
     font-weight: 700;
     float: right;
@@ -34,7 +38,7 @@
     .filter-data {
         width: 35%;
     }
-    #saveMarmaxxSubscription {
+    #saveSierraSubscription {
         margin-top: 25px;
         width: 230px;
     }
@@ -56,7 +60,7 @@
     .addnew-row-last{
         margin-top: 11px;
     }
-    #saveMarmaxxSubscription {
+    #saveSierraSubscription {
         margin-top: 22px;
         width: 305px;
     }
