--- a/wwwroot/css/sierraReports.css
+++ b/wwwroot/css/sierraReports.css
@@ -50,7 +50,7 @@
 
 .sierraSubscriptionsRow_Header {
     height: 40px;
-    background: #9E0000;
+    background: #f28c20;
     position: sticky;
     top: 0px;
     color: white;
