Adding another video tutorial and adding visual changes (hiding view data button)

--- a/Views/Help/Index.cshtml
+++ b/Views/Help/Index.cshtml
@@ -18,20 +18,46 @@
 
         <div class="list-elements">
             <ol type="a">
-                <li>Click on "Add New User"</li>
-                <li>Enter the User's email, and select their active status</li>
-                <li>Select a master group to view it's subscription groups</li>
+                <li>Click on "Add New User".</li>
+                <li>Enter the User's email, then select their active status.</li>
+                <li>Select a master group to view it's subscription groups.</li>
                 <li>Select the subscription group that the User will be added to, then click "Submit User".</li>
                 <li>Note: You can add the User to multiple groups - the dropdown box allows you to select multiple.</li>
             </ol>
         </div>
-        
+
         <div class="video-tutorial">
             <video width="500" controls>
                 <source src="~/Videos/Add user to subscription group.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
+        </div>
 
+        <div class="separator-line-help">
+        </div>
+    </div>
+
+    <div class="individual-step">
+        <h5>2. Verify the Subscription Group's Users Before Creating the Subscription</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>Click on the "Master Group" dropdown and choose "Select All".</li>
+                <li>Click on the "Group" dropdown and choose "Select All".</li>
+                <li>Select the Subscription Group ID in the "Group ID" dropdown. (Use the search bar in the dropdown!)</li>
+                <li>Click "View Data" to view all of the users tied to this Subscription Group.</li>
+                <li>Edit or Delete Users of your choice by clicking the Pencil or Garbage icon next to the user in the table.</li>
+            </ol>
+        </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/Verify subscription group.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+
+        <div class="separator-line-help">
         </div>
     </div>
 </div>
