--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -37,7 +37,7 @@
 
     <div class="addnew-row-last">
         <button id="backToMarMaxx" class="btnAddPage" type="button" onclick="location.href='@Url.Action("Index", "MarMaxxReports")'">Back</button>
-        <button id="viewReportParams" class="btnAddPage" type="button">View Report Parameters</button>
+        <button id="viewReportParams" class="btnAddPage" type="button" hidden>View Report Parameters</button>
     </div>
 </div>
 
