--- a/Views/SubscriptionGroups/AddNewUserSub.cshtml
+++ b/Views/SubscriptionGroups/AddNewUserSub.cshtml
@@ -1,7 +1,7 @@
 ﻿@model eComm_Reporting_Application.Models.UserSubscriptionDropdownModel
 
 @{
-    ViewData["Title"] = "Add New User Subscription Group";
+    ViewData["Title"] = "Add New User";
 }
 
 @section Scripts{
@@ -12,7 +12,7 @@
 
 <div class="page-header">
     <div class="page-title">
-        <h1 class="title-text">Add New User Subscription Group</h1>
+        <h1 class="title-text">Add New User</h1>
     </div>
 </div>
 
