--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -35,14 +35,14 @@
         </div>
     </div>
     
-    <button id="btnViewMarmaxxData" class="btnViewData" type="button">View Data</button>
+    <button id="btnViewMarmaxxData" class="btnViewData" type="button" hidden>View Data</button>
 </div>
 
 <div class="separator-line">
 </div>
 
 <div class="addNew">
-    <h4 class="addNewText">Add New Subscription</h4>
+    <h4 class="addNewText" onclick="location.href='@Url.Action("AddNewReportSub", "MarMaxxReports")'">Add New Subscription</h4>
     <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewReportSub", "MarMaxxReports")'"></i></button>
 </div>
 
