Finished up help page

--- a/Views/Help/Index.cshtml
+++ b/Views/Help/Index.cshtml
@@ -21,7 +21,7 @@
                 <li>Click on "Add New User".</li>
                 <li>Enter the User's email, then select their active status.</li>
                 <li>Select a master group to view it's subscription groups.</li>
-                <li>Select the subscription group that the User will be added to, then click "Submit User".</li>
+                <li>Select the Subscription Group that the User will be added to, then click "Submit User".</li>
                 <li>Note: You can add the User to multiple groups - the dropdown box allows you to select multiple.</li>
             </ol>
         </div>
@@ -32,9 +32,9 @@
                 Your browser does not support HTML video.
             </video>
         </div>
+    </div>
 
-        <div class="separator-line-help">
-        </div>
+    <div class="separator-line-help">
     </div>
 
     <div class="individual-step">
@@ -56,8 +56,61 @@
                 Your browser does not support HTML video.
             </video>
         </div>
+    </div>
 
-        <div class="separator-line-help">
+    <div class="separator-line-help">
+    </div>
+
+    <div class="individual-step">
+        <h5>3. Add a New Report Subscription for the Group</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>Click on the "MarMaxx Reports Subscriptions" tab.</li>
+                <li>Click on "Add New Subscription".</li>
+                <li>Select the folder in which your desired report is in, or choose "Select All" in the "Folder" dropdown.</li>
+                <li>Select the desired report in the "Report Name" dropdown (use the search bar in the dropdown if you can't find it).</li>
+                <li>The report parameters will now load, and their default values will be selected.</li>
+                <li>Enter a name for the subscription, then select the group to which you added the user to earlier.</li>
+                <li>Scroll through the rest of the parameters and select values of your choice.</li>
+                <li>Click on "Save MarMaxx Report Subscription".</li>
+            </ol>
         </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/Add report subscription.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+    </div>
+
+    <div class="separator-line-help">
+    </div>
+
+    <div class="individual-step">
+        <h5>4. Verify Report Subscription(s)</h5>
+
+        <div class="list-elements">
+            <ol type="a">
+                <li>Ensure that you are on the "MarMaxx Reports Subscriptions" tab.</li>
+                <li>Select the folder in which your report subscription's report is in, or choose "Select All" in the "Folder" dropdown.</li>
+                <li>Select the report from the subscription in the "Report Name" dropdown (use the search bar in the dropdown if you can't find it).</li>
+                <li>The data will now load and be displayed in a table.</li>
+                <li>You can delete a subscription with the garbage icon, and you can edit it with the pencil icon.</li>
+                <li>You can create a copy of a report subscription by clicking the paper icon, and you can modify it before saving.</li>
+                <li>If there is an ellipses (...), you can click on it to expand and view the rest of the data.</li>
+            </ol>
+        </div>
+
+        <div class="video-tutorial">
+            <video width="500" controls>
+                <source src="~/Videos/Verify report subscriptions.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+        </div>
+    </div>
+
+    <div class="separator-line-help">
     </div>
 </div>
