Marmaxx report subscription table saves in session with the add new and edit pages

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -41,9 +41,9 @@
 <div class="separator-line">
 </div>
 
-<div class="addNew">
-    <h4 class="addNewText" onclick="location.href='@Url.Action("AddNewReportSub", "MarMaxxReports")'">Add New Subscription</h4>
-    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewReportSub", "MarMaxxReports")'"></i></button>
+<div class="addNew" id="addNewDiv">
+    <h4 class="addNewText">Add New Subscription</h4>
+    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle"></i></button>
 </div>
 
 <div id="marMaxxSubscriptionData">
