All session bugs fixed

--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -65,7 +65,7 @@
 </div>
 
 <div class="addNew">
-    <h4 class="addNewText">Add New User</h4>
+    <h4 class="addNewText" onclick="location.href='@Url.Action("AddNewUserSub", "SubscriptionGroups")'">Add New User</h4>
     <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewUserSub", "SubscriptionGroups")'"></i></button>
 </div>
 
