Adding banner field and styling it for both resolutions, no functionality yet

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -33,6 +33,11 @@
             <select id="marMaxxReportDropdown" name="marMaxxReportDropdown">
             </select>
         </div>
+        <div class="main-dropdown banner">
+            <label class="filter-label" for="marMaxxBannerDropdown">Banner:</label>
+            <select id="marMaxxBannerDropdown" name="marMaxxBannerDropdown">
+            </select>
+        </div>
     </div>
     
     <button id="btnViewMarmaxxData" class="btnViewData" type="button" hidden>View Data</button>
