Added Banner dropdown and saves in session on Marmaxx Report Subscriptions Screen

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -35,7 +35,7 @@
         </div>
         <div class="main-dropdown banner">
             <label class="filter-label" for="marMaxxBannerDropdown">Banner:</label>
-            <select id="marMaxxBannerDropdown" name="marMaxxBannerDropdown">
+            <select id="marMaxxBannerDropdown" name="marMaxxBannerDropdown" multiple>
             </select>
         </div>
     </div>
